blogs/eks-canary-deployments-pipeline/microservices/yelb-appserver/specfiles/kubernetes.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    mesh: yelb
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
  name: yelb
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: yelb-appserver
  namespace: yelb
spec:
  awsName: yelb-appserver
  provider:
    virtualRouter:
        virtualRouterRef:
            name: yelb-appserver
---
apiVersion: v1
kind: Service
metadata:
  namespace: yelb
  name: yelb-appserver-CANARY_VERSION
  labels:
    app: yelb-appserver
    version: "CANARY_VERSION"
    tier: middletier
spec:
  type: ClusterIP
  ports:
    - port: 4567
      name: http
  selector:
    app: yelb-appserver
    version: "CANARY_VERSION"
    tier: middletier
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: yelb
  name: yelb-appserver-CANARY_VERSION
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yelb-appserver
      version: "CANARY_VERSION"
      tier: middletier
  template:
    metadata:
      labels:
        app: yelb-appserver
        version: "CANARY_VERSION"
        tier: middletier
    spec:
      containers:
        - name: yelb-appserver
          image: CONTAINER_IMAGE
          ports:
            - containerPort: 4567
---
apiVersion: v1
kind: Service
metadata:
  namespace: yelb
  name: yelb-appserver # used to provide a DNS entry for yelb-appserver VS
spec:
  ports:
    - port: 4567
      name: http
