blogs/eks-canary-deployments-pipeline/microservices/yelb-appserver/specfiles/kubernetes_template.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    mesh: ${MESH_NAME}
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
  name: ${KUBERNETES_NAMESPACE}
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: ${MICROSERVICE_NAME}
  namespace: ${KUBERNETES_NAMESPACE}
spec:
  awsName: ${MICROSERVICE_NAME}
  provider:
    virtualRouter:
        virtualRouterRef:
            name: ${MICROSERVICE_NAME}
---
apiVersion: v1
kind: Service
metadata:
  namespace: ${KUBERNETES_NAMESPACE}
  name: ${MICROSERVICE_NAME}-${CANARY_VERSION}
  labels:
    app: ${MICROSERVICE_NAME}
    version: "${CANARY_VERSION}"
    tier: middletier
spec:
  type: ClusterIP
  ports:
    - port: 4567
      name: http
  selector:
    app: ${MICROSERVICE_NAME}
    version: "${CANARY_VERSION}"
    tier: middletier
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${KUBERNETES_NAMESPACE}
  name: ${MICROSERVICE_NAME}-${CANARY_VERSION}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${MICROSERVICE_NAME}
      version: "${CANARY_VERSION}"
      tier: middletier
  template:
    metadata:
      labels:
        app: ${MICROSERVICE_NAME}
        version: "${CANARY_VERSION}"
        tier: middletier
    spec:
      containers:
        - name: ${MICROSERVICE_NAME}
          image: ${CONTAINER_IMAGE}
          ports:
            - containerPort: 4567
---
apiVersion: v1
kind: Service
metadata:
  namespace: ${KUBERNETES_NAMESPACE}
  name: ${MICROSERVICE_NAME} # used to provide a DNS entry for ${MICROSERVICE_NAME} VS
spec:
  ports:
    - port: 4567
      name: http
